added pages folder

--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="Simple twitter"
-    />
+    <meta name="description" content="Simple twitter"/>
+    <link rel="stylesheet" href="index.css">
     <title>Simple Twitter</title>
   </head>
   <body>
